# rs-aksem-template

./: .env.example  Cargo.toml  Dockerfile
.sqlx/: query-545221e65c4c585e8bf4ea2b6e7e55d77daa000798cf924561db11d4cb7108c7.json  query-7fced575746d1c1c12148aa2eff776d38f39ed784885de9e2f17394c8422af44.json  query-cf9b2f299d70c6a7416d14c05adb318e4c4ae1065733f6129a94e9d17d48991d.json
alpine/: Dockerfile
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/routes/: Cargo.toml
crates/routes/src/: lib.rs  ticket.rs
migrations/: 20240601083848_create_tickets_table.up.sql
src/: app_state.rs  lib.rs  main.rs
src/config/: mod.rs
src/entity/: mod.rs
src/error/: db.rs  error.rs  mod.rs
src/handler/: mod.rs  root.rs
src/handler/tickets/: change_status.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/result/: api_response.rs  mod.rs  status.rs
src/result/error/: db.rs  mod.rs  ticket.rs
