workspace = { members = ["crates/db"] }

[package]
name = "rs-aksem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0.61"
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio-native-tls", "mysql", "chrono", "uuid"]
